syntax = "proto3";

option csharp_namespace = "UserManagement";

package user;
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";


service UserServiceGrpc {
  rpc GetUser(GetUserRequest) returns (UserResponse) {
      option (google.api.http) = {
          get: "/v1/users/{id}"
        };
  }
  rpc GetAll(GetAllUserRequest) returns (ListUsersResponse) {
      option (google.api.http) = {
          get: "/v1/users"
        };
  }
  rpc AddUser(AddUserRequest) returns (UserResponse) {
      option (google.api.http) = {
          post: "/v1/users"
        };
  }
}


message GetAllUserRequest {
}

message GetUserRequest {
  string id = 1;
}


message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp dateOfBirth = 4;
}

message ListUsersResponse {
  repeated UserResponse users = 1;
}

message AddUserRequest {
  string name = 1;
  string email = 3;
  google.protobuf.Timestamp dateOfBirth = 4;
}